--- a/.github/workflows/acmain.yml
+++ b/.github/workflows/acmain.yml
@@ -24,6 +24,6 @@ jobs:
         uses: zaproxy/action-baseline@v0.3.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          target: 'http://d-peral.com/'
+          target: 'http://king-air.co.kr/'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a'
