--- a/.github/workflows/acmain.yml
+++ b/.github/workflows/acmain.yml
@@ -21,7 +21,7 @@ jobs:
         with:
           ref: master
       - name: ZAP Scan
-        uses: zaproxy/action-baseline@v0.3.0
+        uses: zaproxy/action-full-scan@v0.3.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
           target: 'http://king-air.co.kr/'
