--- a/.github/workflows/acmain.yml
+++ b/.github/workflows/acmain.yml
@@ -24,6 +24,6 @@ jobs:
         uses: zaproxy/action-full-scan@v0.1.0
         with:
           token: ${{ secrets.GITHUB_TOKEN }}
-          target: 'http://king-air.co.kr/'
+          target: 'https://d-peral.com/'
           rules_file_name: '.zap/rules.tsv'
           cmd_options: '-a  -d'
